# claude-tunnel

./: .dockerignore  .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile.dev  LICENSE  README.md
.cargo/: audit.toml
.claude/skills/agent/: SKILL.md
.claude/skills/central/: SKILL.md
.claude/skills/coordinated-development-loop/: SKILL.md
.claude/skills/developer/: SKILL.md
.github/workflows/: ci.yml  release.yml
config/: desec.env.example
crates/agent/: Cargo.toml
crates/agent/src/: acme.rs  capability.rs  channel.rs  channel_run.rs  config.rs  identity.rs  ladder.rs  lib.rs  main.rs  observe.rs  onboard.rs  origin.rs  p2p.rs  reconnect.rs  serve.rs  transport.rs  well_known.rs
crates/client/: Cargo.toml
crates/client/src/: bench.rs  config.rs  ladder.rs  lib.rs  main.rs  noise.rs  rendezvous.rs  transport.rs
crates/common/: Cargo.toml
crates/common/src/: a2a.rs  channel.rs  credential.rs  lib.rs  mcp.rs  metrics.rs  noise.rs  overlay.rs  policy.rs  pow.rs  ratelimit.rs  replay.rs  settlement.rs  sync.rs  upgrade.rs
crates/control-plane/: Cargo.toml
crates/control-plane/src/: accounts.rs  billing.rs  client.rs  credential.rs  enrollment.rs  http.rs  installer.rs  issuance.rs  lib.rs  main.rs  oidc.rs  payment.rs  payment_provider.rs  portal.rs  portal_api.rs  registry.rs  service.rs  storage.rs  topology.rs
crates/dns/: Cargo.toml
crates/dns/src/: api.rs  client.rs  lib.rs  main.rs  message.rs  provider.rs  server.rs  store.rs
crates/edge/: Cargo.toml
crates/edge/src/: admin.rs  auth.rs  channel_authorize.rs  channel_broker.rs  config.rs  lib.rs  main.rs  observe.rs  pki.rs  relay.rs  rendezvous.rs  serve.rs  sni.rs  state.rs  transport.rs
docker/: Dockerfile  docker-compose.baseline.yml  docker-compose.controlplane.yml  docker-compose.metrics.yml  docker-compose.p2p.yml  docker-compose.tcp.yml  docker-compose.udp.yml  docker-compose.udpbench.yml  docker-compose.yml  netem-entrypoint.sh  thesis.Dockerfile
docker/deploy/: .env.example  compose.frontdoor.yml  compose.selfhost.yml  compose.sso.yml
docker/deploy/k8s/: control-plane-config.yaml  control-plane-deployment.yaml  control-plane-ingress.yaml  control-plane-pvc.yaml  control-plane-service.yaml  edge-config.yaml  edge-deployment.yaml  edge-service.yaml  kustomization.yaml  namespace.yaml
docker/deploy/keycloak/: ct-demo-realm.json
docs/: BACKLOG.md  DEVELOPMENT-PROCESS.md  SPEC.md  architecture.md  dns01-desec.md  install.md
docs/adr/: 0001-provider-blind-e2e-data-plane.md  0002-zero-knowledge-boundary.md  0003-agent-held-certificates.md  0004-quic-data-plane-transport.md  0005-asymmetric-agent-identity.md  0006-single-region-edge-with-tunnel-registry.md  0007-rust-data-plane.md  0008-abuse-handling-responsive-termination.md  0009-risk-based-tiered-identity.md  0010-mesh-plane-first.md  0011-censorship-resistant-lawful-floor.md  0012-minimal-pseudonymous-identity.md  0013-noise-mesh-handshake.md  0014-out-of-band-capabilities.md  0015-p2p-mesh-with-rendezvous.md  0016-agent-side-observability.md  0017-thin-self-hostable-control-plane.md  0018-availability-and-blind-dos-resistance.md  0019-unified-443-gateway.md  0020-agent-fabric-channels-and-trust-chains.md
docs/collective-memory/: 135-layer-4-collective-memory.md  README.md  central-agent-profile.md  flappy-bird-cooperative-design.md  sink-ux-design.md  source-2-mechanics-design.md
docs/deploy/: keycloak-sso.md
docs/onboarding/: quickstart.md
docs/ops/: runbook.md
docs/payment/: integration.md
docs/planning/: PROGRESS.md  v1-first-task-packets.md
docs/product/: positioning.md
docs/security/: dependency-audit.md  threat-model.md  tls-everywhere.md  whitepaper.md
docs/thesis/: .gitignore  references.bib  thesis.tex
docs/thesis/chapters/: anforderungen.tex  architektur.tex  einleitung.tex  evaluation.tex  fazit.tex  grundlagen.tex  implementierung.tex  relatedwork.tex
docs/thesis/data/: latency.csv  pow-latency.csv  results-table.md  results-table.tex  results.md
docs/thesis/haw-template/: .gitignore
docs/thesis/haw-template/template-latex_thesis/ct_thesis/: literature.bib  thesis.tex  thesisglossaries.tex
docs/thesis/haw-template/template-latex_thesis/ct_thesis/appendix/: example_appendix.tex  reproduzierbarkeit.tex
docs/thesis/haw-template/template-latex_thesis/ct_thesis/chapters/: anforderungen.tex  architektur.tex  diskussion.tex  einleitung.tex  evaluation.tex  fazit.tex  first_chapter.tex  grundlagen.tex  implementierung.tex  produktivierung.tex  relatedwork.tex
docs/thesis/haw-template/template-latex_thesis/ct_thesis/configuration/: configuration.tex
docs/thesis/haw-template/template-latex_thesis/example_thesis/: thesis.tex
docs/thesis/haw-template/template-latex_thesis/example_thesis/appendix/: example_appendix.tex
docs/thesis/haw-template/template-latex_thesis/example_thesis/chapters/: first_chapter.tex
docs/thesis/haw-template/template-latex_thesis/example_thesis/configuration/: configuration.tex
docs/thesis/haw-template/template-latex_thesis/manual/: additionalpackages.tex  configurations.tex  firststeps.tex  intro.tex  knownissues.tex  languages.tex  maintainer.tex
docs/thesis/haw-template/template-latex_thesis/style/: abstractpage.tex  configurationcommands.sty  coverpage.tex  coverpageCD2017.tex  coverpage_green.tex  coverpage_medieninformatik.tex  statement.tex  statement_fuf.tex  statement_inf.tex  thesisstyle.sty  titlepage.tex
examples/flappy-bird/: index.html
examples/flappy-demo/: Caddy.Dockerfile  Caddyfile  README.md  compose.flappy-demo.yml  crew.json.example  gate.json.example  index.html  run-demo.sh
examples/help-site/: Caddy.Dockerfile  Caddyfile  README.md  compose.help-site.yml  index.html  run-demo.sh
scripts/: baseline-smoke.sh  check-no-secrets.sh  claude-resume.sh  coverage.sh  demo.sh  e2e-smoke.sh  https-demo.sh  nat-lab.sh  plot.py  plot.sh  provision-agents.sh  redundancy-smoke.sh  role-guard.sh  rotation-smoke.sh  security-audit.sh  sweep.sh  tabulate.py  thesis-build.sh  thesis-haw-build.sh  verify-comment-authors.sh  verify-issue-author.sh
