[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/agent",
    "crates/edge",
    "crates/control-plane",
    "crates/client",
    "crates/dns",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
# A transitive dependency (idna_adapter) requires the `edition2024` Cargo feature,
# stabilized in Rust 1.85; older toolchains (e.g. 1.80/1.82) fail to even parse the
# manifest with a cryptic "feature `edition2024` is required". Declaring the floor here
# (inherited by every crate) makes `cargo` emit a clear "requires rustc 1.85 or newer"
# instead — see the agent skill's Prerequisites for the native no-Docker build path (#143).
rust-version = "1.85"
license-file = "LICENSE"

[workspace.dependencies]
# libp2p connectivity substrate (#121 B2-libp2p-seam / B2-libp2p-tcp / C-circuit-relay /
# B2-dcutr / D-kademlia). Minimal feature set: tokio runtime, noise (connection security) +
# yamux (muxer), the stream protocol for raw substreams, `tcp` for the real loopback-TCP
# transport (dial-by-multiaddr), `relay` for Circuit-Relay v2 (both the server behaviour and
# the client transport), `dcutr` for the Direct Connection Upgrade through Relay hole-punch
# (upgrades a relayed connection to direct), `kad` for Kademlia discovery (#121 D-kademlia: a
# `ChannelId → coordinates` DHT whose record VALUE is holder-signed, invariant #4), and
# `macros` for the `#[derive(NetworkBehaviour)]` that composes the relay-client + dcutr +
# stream behaviours on a client swarm. MemoryTransport lives in libp2p-core (no feature
# gate); no `dns` — we dial raw `/ip4/.../tcp/...` addresses.
libp2p = { version = "0.56", default-features = false, features = ["tokio", "noise", "yamux", "tcp", "quic", "relay", "dcutr", "identify", "kad", "macros"] }
# Raw-substream protocol handler (the `stream::Behaviour`); a sibling crate, not an
# umbrella feature. Gives us an `AsyncRead + AsyncWrite` stream out of the swarm.
libp2p-stream = "0.4.0-alpha"
# Bridges libp2p's `futures` async-IO streams to Tokio's AsyncRead/AsyncWrite.
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
