[package]
name = "ct-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ct-common = { path = "../common" }
ct-control-plane = { path = "../control-plane" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "time"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rcgen = "0.13"
axum = "0.7"
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
libp2p = { workspace = true }
libp2p-stream = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
# test-util enables `#[tokio::test(start_paused = true)]` for deterministic timeout tests (#126).
tokio = { version = "1", features = ["test-util"] }
ct-edge = { path = "../edge" }
ct-client = { path = "../client" }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
