[package]
name = "ct-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
ct-common = { path = "../common" }
ct-control-plane = { path = "../control-plane" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "time"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rcgen = "0.13"
axum = "0.7"
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
libp2p = { workspace = true }
libp2p-stream = { workspace = true }
tokio-util = { workspace = true }

[features]
# #136 N-rig-2b: build the TEST-ONLY natlab harness binary (the Docker 2-NAT DCUtR punch
# lab). Off by default — the harness runs an UNGUARDED relay (invariant #3's membership gate
# is not wired), so it must never be part of a production build. Enable only in the lab:
# `cargo build -p ct-agent --features nat-lab`.
nat-lab = []

[[bin]]
name = "natlab"
path = "src/bin/natlab.rs"
required-features = ["nat-lab"]

[dev-dependencies]
# test-util enables `#[tokio::test(start_paused = true)]` for deterministic timeout tests (#126).
tokio = { version = "1", features = ["test-util"] }
ct-edge = { path = "../edge" }
ct-client = { path = "../client" }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
