[package]
name = "ct-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ct-common = { path = "../common" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }

[dev-dependencies]
ct-edge = { path = "../edge" }
ct-agent = { path = "../agent" }
