[package]
name = "ct-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
ed25519-dalek = "2"
snow = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "sync", "macros"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }
