[package]
name = "ct-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ct-common = { path = "../common" }
ct-dns = { path = "../dns" }
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Test-only: generate a throwaway RSA key at runtime to prove the JWKS -> verifier
# round-trip (#42 KC2-b) without committing a private key (secret-guard forbids).
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
