[package]
name = "ct-dns"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# AD1 codec + store are dependency-free; AD2 adds the UDP+TCP :53 responder.
tokio = { version = "1", features = ["net", "rt", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
