[package]
name = "ct-dns"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
# AD1 codec + store are dependency-free; AD2 adds the :53 responder; AD3 adds the
# localhost HTTP API (axum) + the ct-dns binary; AD5 adds the DNS-01 provider
# abstraction with a deSEC (https://desec.io) backend (reqwest + serde_json).
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros", "io-util", "time"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
