[package]
name = "ct-edge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ct-common = { path = "../common" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "sync"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rcgen = "0.13"
rustls-pemfile = "2"
rand = "0.8"
axum = "0.7"

[dev-dependencies]
ct-control-plane = { path = "../control-plane" }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
ed25519-dalek = "2"
