[package]
name = "ct-edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
ct-common = { path = "../common" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "sync", "time"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rcgen = "0.13"
# PEM cert/key parsing via the maintained rustls-pki-types (replaces the
# unmaintained rustls-pemfile, RUSTSEC-2025-0134 / #80 SEC80b). Already in the tree
# via rustls; the `pem` feature enables the PemObject decoders used in transport.rs.
rustls-pki-types = { version = "1", features = ["std", "alloc"] }
rand = "0.8"
axum = "0.7"
# #81 SEC81c-c c-ii: the edge queries the control plane's channel-authorize endpoint.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# `test-util` (dev-only) enables tokio's paused clock for the #111 Slowloris timeout test
# (`#[tokio::test(start_paused = true)]`); it stays out of the production build.
tokio = { version = "1", features = ["test-util"] }
ct-control-plane = { path = "../control-plane" }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
ed25519-dalek = "2"
serde_json = "1"
